Fixes problems with page layout on small screens

--- a/app/src/variables.scss
+++ b/app/src/variables.scss
@@ -5,4 +5,4 @@ $gray: #636363;
 $gray-light: #DEDEDE;
 
 $h1-font-size: 30px;
-$page-margin: 120px;
+$page-margin: 100px;
